# Rust-Juniper-Rocket-GraphQL-Example

./: Cargo.toml  README.md
src/: main.rs  model.rs  schema.rs
